[#24] JPA 적용 - 지역 도메인 - 전문 분야 도메인에 애노테이션을 통한 DB 테이블 매핑   - BaseEntity 상속시킴
- 지역 JpaRepository 생성 및 적용
  - 관련 서비스 로직 변경

- MySQL에서 지원하는 GEOMETRY 데이터 타입을 사용하기 위해 hibernate-spatial 의존성 추가.
  - hibernate-spatial 에서 연동되는 hibernate-core 버전으로 의존성 변경.